// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsPage renderTabContent should render Billing Tab 1`] = `
<div>
  <CostExplorerTab />
</div>
`;

exports[`AnalyticsPage renderTabContent should render Detailed Tab 1`] = `
<div>
  <DetailedTab />
</div>
`;

exports[`AnalyticsPage should match a snapshot 1`] = `
<Connect(ErrorBoundary)>
  <H3
    isHeadingSection={true}
  >
    Dashboard
  </H3>
  <Section>
    <Tabs
      tabConfigs={
        Array [
          Object {
            "active": true,
            "displayText": "DETAILED",
            "onTabClick": [Function],
            "tabIdentifier": "detailed",
          },
          Object {
            "active": false,
            "displayText": "Cost Explorer",
            "onTabClick": [Function],
            "tabIdentifier": "costexplorer",
          },
        ]
      }
    />
  </Section>
  <DetailedTab />
</Connect(ErrorBoundary)>
`;
